--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "KHAN-MD",
+  "name": "𝐌𝐡𝐫_𝐇𝐚𝐬𝐞𝐞𝐛",
   "version": "2.0.0",
-  "description": "A WhatsApp Bot Created By JawadTechX",
+  "description": "A WhatsApp Bot Created By 𝐇𝐚𝐬𝐞𝐞𝐛 𝐀𝐤𝐫𝐚𝐦",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start index.js --deep-monitoring --attach --name KHANX-AI",
+    "start": "pm2 start index.js --deep-monitoring --attach --name Mr_Haseeb",
     "stop": "pm2 stop KHANX-AI",
-    "restart": "pm2 restart KHANX-AI"
+    "restart": "pm2 restart Mr_Haseeb"
   },
   "dependencies": {
     "@whiskeysockets/baileys": "6.6.0",
